--- a/src/assets/styles/footer.styl
+++ b/src/assets/styles/footer.styl
@@ -1,6 +1,6 @@
 #footer{
     margin-top: 40px
     text-align: center
-    color: #bfbfbf
-    font-size: 10px
-    text-shadow: 0 1px 0 #bfbfbf}
+    color: #eee
+    font-size: 15px
+    text-shadow: 0 2px 0 2px #bfbfbf}
